WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186296
[Win] REGRESSION(
r232486
) 'WebCore::RenderTheme::activeListBoxSelectionBackgroundColor': function does not take 0 arguments
https://bugs.webkit.org/show_bug.cgi?id=186296
Summary
[Win] REGRESSION(r232486) 'WebCore::RenderTheme::activeListBoxSelectionBackgr...
Fujii Hironori
Reported
2018-06-04 18:38:28 PDT
[Win] REGRESSION(
r232486
) 'WebCore::RenderTheme::activeListBoxSelectionBackgroundColor': function does not take 0 arguments
https://build.webkit.org/builders/WinCairo%2064-bit%20WKL%20Release%20%28Build%29/builds/788
> ..\..\Source\WebCore\platform\win\PopupMenuWin.cpp(624): error C2660: 'WebCore::RenderTheme::activeListBoxSelectionBackgroundColor': function does not take 0 arguments > ..\..\Source\WebCore\platform\win\PopupMenuWin.cpp(625): error C2660: 'WebCore::RenderTheme::activeListBoxSelectionForegroundColor': function does not take 0 arguments
Attachments
Patch
(1.80 KB, patch)
2018-06-04 19:18 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(2.82 KB, patch)
2018-06-04 19:29 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-06-04 19:03:22 PDT
>PopupMenuWin.cpp >c:\webkit\ga\source\webcore\platform\win\popupmenuwin.cpp(624): error C2660: 'WebCore::RenderTheme::activeListBoxSelectionBackgroundColor': function does not take 0 arguments >c:\webkit\ga\source\webcore\platform\win\popupmenuwin.cpp(625): error C2660: 'WebCore::RenderTheme::activeListBoxSelectionForegroundColor': function does not take 0 arguments >RenderThemeWin.cpp >c:\webkit\ga\source\webcore\rendering\renderthemewin.cpp(316): error C2660: 'WebCore::RenderThemeWin::platformActiveSelectionForegroundColor': function does not take 0 arguments
Timothy Hatcher
Comment 2
2018-06-04 19:18:24 PDT
Created
attachment 341947
[details]
Patch
Timothy Hatcher
Comment 3
2018-06-04 19:29:28 PDT
Created
attachment 341948
[details]
Patch
Fujii Hironori
Comment 4
2018-06-04 20:57:51 PDT
I've confirmed your patch fixes the break in my PC. Thank you for working on this.
WebKit Commit Bot
Comment 5
2018-06-04 21:12:53 PDT
Comment on
attachment 341948
[details]
Patch Clearing flags on attachment: 341948 Committed
r232500
: <
https://trac.webkit.org/changeset/232500
>
WebKit Commit Bot
Comment 6
2018-06-04 21:12:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-06-04 21:13:19 PDT
<
rdar://problem/40793328
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug