[Win] REGRESSION(r232486) 'WebCore::RenderTheme::activeListBoxSelectionBackgroundColor': function does not take 0 arguments https://bugs.webkit.org/show_bug.cgi?id=186296

Unreviewed build fix.


* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::paint):
* rendering/RenderThemeWin.cpp:
(WebCore::RenderThemeWin::platformInactiveSelectionForegroundColor const):


Canonical link: https://commits.webkit.org/201681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232500 268f45cc-cd09-0410-ab3c-d52691b4dbfc